[tool.poetry]
name = "generate_typo_dictionary"
version = "0.1.0"
description = ""
authors = ["Yuta Hayashibe <yuta@hayashibe.jp>"]

[tool.poetry.dependencies]
python = "^3.11"
Levenshtein = "^0.25.1"
Inflector = "^3.0.1"

[tool.poetry.dev-dependencies]
flake8 = ">=3.8.4"
isort = ">=5.6.4"
black = ">=21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
